Now showing vnode partitions and handoff status.

--- a/priv/admin/index.html
+++ b/priv/admin/index.html
@@ -19,5 +19,6 @@
     <div id="membership"></div>
     <div id="stats"></div>
     <div id="cluster"></div>
+    <div id="partitions"></div>
   </body>
 </html>
