Node actions, global vnode status.

--- a/priv/admin/index.html
+++ b/priv/admin/index.html
@@ -19,6 +19,10 @@
     <div id="membership"></div>
     <div id="stats"></div>
     <div id="cluster"></div>
+    <div>
+      <hr width="50%" align="left">
+      <input type="text" id="node"></input>
+      <input type="submit" value="Join" onclick="join_node()"></input>
     <div id="partitions"></div>
   </body>
 </html>
