Moved routes around to make more sense and simplify the admin_node module considerably. All routes that require RPC to a given node go into admin_node and routes that can be done from any node on the cluster go into admin_cluster.

--- a/priv/admin/index.html
+++ b/priv/admin/index.html
@@ -22,7 +22,8 @@
     <div>
       <hr width="50%" align="left">
       <input type="text" id="node"></input>
-      <input type="submit" value="Join" onclick="join_node()"></input>
+      <input type="button" value="Join" onclick="join_node()"></input>
+      <input type="button" value="Add" onclick="add_node()"></input>
     <div id="partitions"></div>
   </body>
 </html>
