Set version #. Created 'coming soon' pages for the extra tabs.

--- a/priv/admin/cluster.html
+++ b/priv/admin/cluster.html
@@ -43,11 +43,11 @@
 	<ul>
 	  <li><a href="#" class="active">Cluster</a></li>
 	  <li><a href="/admin/ui/ring.html">Ring</a></li>
-	  <li><a href="#">Objects</a></li>
-	  <li><a href="#">Map/Reduce</a></li>
-	  <li><a href="#">Graphs</a></li>
-	  <li><a href="#">Console</a></li>
-	  <li><a href="#">Support</a></li>
+	  <li><a href="/admin/ui/objects.html">Objects</a></li>
+	  <li><a href="/admin/ui/mr.html">Map/Reduce</a></li>
+	  <li><a href="/admin/ui/graphs.html">Graphs</a></li>
+	  <li><a href="/admin/ui/console.html">Console</a></li>
+	  <li><a href="/admin/ui/support.html">Support</a></li>
 	</ul>
       </div>
 
