--- a/priv/admin/graphs.html
+++ b/priv/admin/graphs.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Ring Overview</title>
+    <title>Graphs</title>
     
     <!-- jquery -->
     <script 
@@ -42,10 +42,10 @@
       <div id="navigation">
 	<ul>
 	  <li><a href="/admin/ui/cluster.html">Cluster</a></li>
-	  <li><a href="#" class="active">Ring</a></li>
+	  <li><a href="/admin/ui/ring.html">Ring</a></li>
 	  <li><a href="/admin/ui/objects.html">Objects</a></li>
 	  <li><a href="/admin/ui/mr.html">Map/Reduce</a></li>
-	  <li><a href="/admin/ui/graphs.html">Graphs</a></li>
+	  <li><a href="#" class="active">Graphs</a></li>
 	  <li><a href="/admin/ui/console.html">Console</a></li>
 	  <li><a href="/admin/ui/support.html">Support</a></li>
 	</ul>
@@ -54,32 +54,14 @@
       <!-- primary content view -->
       <div id="content-container">
 	<div id="content">
-	  <h2 id="section">Ring Overview</h2><br/>
-          <table width="100%">
-            <tr>
-              <td align="left" class="header">Partition</td>
-              <td align="right" class="header" width="300px">Owner</td>
-              <td align="center" class="header" width="24px">K</td>
-              <td align="center" class="header" width="24px">P</td>
-              <td align="center" class="header" width="24px">S</td>
-            </tr>
-          </table>
-          <div id="ring-table">
-            <img src="/admin/ui/spinner.gif">
-          </div>
+	  <h2 id="section">Graphs</h2><br/>
+          Coming soon...
 	</div>
 
         <!-- side panel for node details -->
 	<div id="aside">
-	  <h2>Ring Filter</h2><br/>
-          <div>
-            Select a fitler for the ring overview...
-            <p id="ring-filter" style="margin-top:10px;">
-              <select id="filter">
-                <option value="/admin/ring/partitions">All</option>
-              </select>
-            </p>
-          </div>
+	  <h2>Statistics</h2><br/>
+          TODO: list stats available to graph here
         </div>
 
         <!-- footer, basho copyright -->
