--- a/priv/admin/objects.html
+++ b/priv/admin/objects.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Ring Overview</title>
+    <title>Objects</title>
     
     <!-- jquery -->
     <script 
@@ -42,8 +42,8 @@
       <div id="navigation">
 	<ul>
 	  <li><a href="/admin/ui/cluster.html">Cluster</a></li>
-	  <li><a href="#" class="active">Ring</a></li>
-	  <li><a href="/admin/ui/objects.html">Objects</a></li>
+	  <li><a href="/admin/ui/ring.html">Ring</a></li>
+	  <li><a href="#" class="active">Objects</a></li>
 	  <li><a href="/admin/ui/mr.html">Map/Reduce</a></li>
 	  <li><a href="/admin/ui/graphs.html">Graphs</a></li>
 	  <li><a href="/admin/ui/console.html">Console</a></li>
@@ -54,23 +54,13 @@
       <!-- primary content view -->
       <div id="content-container">
 	<div id="content">
-	  <h2 id="section">Ring Overview</h2><br/>
-          <table width="100%">
-            <tr>
-              <td align="left" class="header">Partition</td>
-              <td align="right" class="header" width="300px">Owner</td>
-              <td align="center" class="header" width="24px">K</td>
-              <td align="center" class="header" width="24px">P</td>
-              <td align="center" class="header" width="24px">S</td>
-            </tr>
-          </table>
-          <div id="ring-table">
-            <img src="/admin/ui/spinner.gif">
-          </div>
+	  <h2 id="section">Objects</h2><br/>
+          Coming soon...
 	</div>
 
         <!-- side panel for node details -->
 	<div id="aside">
+          <!--
 	  <h2>Ring Filter</h2><br/>
           <div>
             Select a fitler for the ring overview...
@@ -80,6 +70,7 @@
               </select>
             </p>
           </div>
+          -->
         </div>
 
         <!-- footer, basho copyright -->
