--- a/priv/admin/cluster.html
+++ b/priv/admin/cluster.html
@@ -22,11 +22,11 @@
                         <ul id="nav-ul">
                             <li id="nav-cluster" class="nav-li"><a class="gui-text-bold nav-item">Cluster</a></li>
                             <li id="nav-ring" class="nav-li"><a class="gui-text-bold nav-item">Ring</a></li>
-                            <li id="nav-objects" class="nav-li"><a class="gui-text-bold nav-item">Objects</a></li>
-                            <li id="nav-mapreduce" class="nav-li"><a class="gui-text-bold nav-item">Map/Reduce</a></li>
-                            <li id="nav-graphs" class="nav-li"><a class="gui-text-bold nav-item">Graphs</a></li>
-                            <li id="nav-logs" class="nav-li"><a class="gui-text-bold nav-item">Logs</a></li>
-                            <li id="nav-support" class="nav-li"><a class="gui-text-bold nav-item">Support</a></li>
+                            <li id="nav-objects" class="nav-li-disabled"><a class="gui-text-bold nav-item">Objects</a></li>
+                            <li id="nav-mapreduce" class="nav-li-disabled"><a class="gui-text-bold nav-item">Map/Reduce</a></li>
+                            <li id="nav-graphs" class="nav-li-disabled"><a class="gui-text-bold nav-item">Graphs</a></li>
+                            <li id="nav-logs" class="nav-li-disabled"><a class="gui-text-bold nav-item">Logs</a></li>
+                            <li id="nav-support" class="nav-li-disabled"><a class="gui-text-bold nav-item">Support</a></li>
                         </ul>
                         <div id="active-nav"></div>
                     </div>
