--- a/priv/admin/cluster.html
+++ b/priv/admin/cluster.html
@@ -21,7 +21,7 @@
                     <div id="navigation">
                         <ul id="nav-ul">
                             <li id="nav-cluster" class="nav-li"><a class="gui-text-bold nav-item">Cluster</a></li>
-                            <li id="nav-ring" class="nav-li"><a class="gui-text-bold nav-item">Ring</a></li>
+                            <li id="nav-ring" class="nav-li-disabled"><a class="gui-text-bold nav-item">Ring</a></li>
                             <li id="nav-objects" class="nav-li-disabled"><a class="gui-text-bold nav-item">Objects</a></li>
                             <li id="nav-mapreduce" class="nav-li-disabled"><a class="gui-text-bold nav-item">Map/Reduce</a></li>
                             <li id="nav-graphs" class="nav-li-disabled"><a class="gui-text-bold nav-item">Graphs</a></li>
