--- a/priv/admin/ring.html
+++ b/priv/admin/ring.html
@@ -8,9 +8,9 @@
        type="text/javascript"></script>
 
     <!-- common admin panel functions -->
-    <script
+    <!--<script
        src="/admin/ui/admin.js"
-       type="text/javascript"></script>
+       type="text/javascript"></script>-->
 
     <!-- ring functions -->
     <script
