The tooltips bar now only shows up when you need it.

--- a/priv/admin/index.html
+++ b/priv/admin/index.html
@@ -44,7 +44,7 @@
     </div><!-- #wrapper -->
     
     
-    <div id="tooltips">
+    <div id="tooltips" class="hide">
         <div id="inner-tooltips">
             <table><tr>
                 <td id="display-tips" class="gui-text"></td>
