--- a/priv/admin/index.html
+++ b/priv/admin/index.html
@@ -12,7 +12,7 @@
     <!-- header with logo -->
     <div id="header">
         <a id="riak-control-logo"></a>
-        <a id="basho-logo" href="http://www.basho.com"></a>
+        <a id="basho-logo" href="http://www.basho.com" target="_blank"></a>
     </div><!-- header -->
 
     <!-- wrap entire content -->
