--- a/priv/admin/index.html
+++ b/priv/admin/index.html
@@ -22,7 +22,7 @@
                 <td id="nav-box">
                     <div id="navigation">
                         <ul id="nav-ul">
-                            <li id="nav-overview" class="nav-li"><a class="gui-text-bold nav-item">Overview</a></li>
+                            <li id="nav-snapshot" class="nav-li"><a class="gui-text-bold nav-item">Snapshot</a></li>
                             <li id="nav-cluster" class="nav-li"><a class="gui-text-bold nav-item">Cluster</a></li>
                             <li id="nav-ring" class="nav-li"><a class="gui-text-bold nav-item">Ring</a></li>
                             <li id="nav-objects" class="nav-li-disabled"><a class="gui-text-bold nav-item">Objects</a></li>
