fixed a bug where nodes would sometimes flash back to valid after stopping them

--- a/priv/admin/cluster.html
+++ b/priv/admin/cluster.html
@@ -1,13 +1,10 @@
-<html>
-<head>
-    <meta charset="UTF-8" />
-    <title>Cluster Overview</title>
-    <link type="text/css" rel="stylesheet" media="all" href="/admin/ui/style.css" />
+<html> <head>     <meta charset="UTF-8" />     <title>Cluster Overview</title>
+<link type="text/css" rel="stylesheet" media="all" href="/admin/ui/style.css" />
 </head>
 
 <!-- when the page finishes loading, start filling in details -->
 <body>
-    
+
     <!-- header with logo -->
     <div id="header">
         <a id="riak-control-logo"></a>
