Setup some more testing requirements
mockjax is used for ajax stubbing, so we don't need to interact with the
live server in the tests, the responses reside in mock_responses so the
test files are not cluttered

--- a/test/javascripts/index.html
+++ b/test/javascripts/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <title>Riak Control Test Suite</title>
 	<link rel="stylesheet" href="./support/qunit-1.12.0.css">
+  <style>
+    #ember-testing-container {
+      position: absolute;
+      background: white;
+      bottom: 0; right: 0;
+      width: 640px;
+      height: 384px;
+      overflow: auto;
+      z-index: 9999;
+      border: 1px solid #ccc;
+      }
+      #ember-testing { zoom: 50%; }
+    </style>
 </head>
 <body>
     <div id="qunit"></div>
@@ -28,7 +41,10 @@
       minispade.require('app');
     </script>
 
+    <script src="./support/jquery.mockjax.js"></script>
     <script src="./test_helper.js"></script>
     <script src="./support/qunit-1.12.0.js"></script>
+    <script src="./data/mock_responses.js"></script>
+    <script src="./pages_test.js"></script>
 </body>
 </html>
