move the document write to index.html

--- a/test/javascripts/index.html
+++ b/test/javascripts/index.html
@@ -21,7 +21,9 @@
 <body>
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
-
+    <div id="ember-testing-container">
+      <div id="ember-testing"></div>
+    </div>
     <script src="./admin/js/generated/vendor.js"></script>
     <script src="./admin/js/generated/templates.js"></script>
 
